<?xml version="1.0"?>
<package format="2">
  <name>led_circuit_msgs</name>
  <version>0.0.1</version>
  <description>The led_circuit_msgs package</description>

  <maintainer email="shunmo17@yahoo.co.jp">Shunmo17</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

  <export>
  </export>
</package>
